--- a/LeagueOfNinjas/LeagueOfNinjas/Views/InventoryWindow.xaml
+++ b/LeagueOfNinjas/LeagueOfNinjas/Views/InventoryWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LeagueOfNinjas.Views"
+        ResizeMode="NoResize"
         mc:Ignorable="d"
         Title="InventoryWindow" SizeToContent="WidthAndHeight" 
         DataContext="{Binding NinjaInventory, Source={StaticResource Locator}}">
