--- a/LeagueOfNinjas/LeagueOfNinjas/Views/ShopWindow.xaml
+++ b/LeagueOfNinjas/LeagueOfNinjas/Views/ShopWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LeagueOfNinjas.Views"
         xmlns:leagueOfNinjas="clr-namespace:LeagueOfNinjas"
+        ResizeMode="NoResize"
         mc:Ignorable="d"
         Title="ShopWindow" SizeToContent="WidthAndHeight" 
          DataContext="{Binding Shop, Source={StaticResource Locator}}">
